# rustyforge

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RustyForge.toml
.github/workflows/: ci.yml
src/: arguments.rs  compile.rs  config.rs  discovery.rs  fs_utils.rs  hashes.rs  linker.rs  main.rs  tests.rs  ui.rs  utils.rs
tests/fixtures/broken_project/: main.c
tests/fixtures/broken_project/forge/.forge/: hash_cache.json
tests/fixtures/valid_project/: lib.c  main.c
tests/fixtures/valid_project/forge/.forge/: hash_cache.json
tests/fixtures/valid_project/include/: lib.h
