[package]
name = "rustyforge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
toml = "0.8.23"
clap = { version = "4.5.39", features = ["derive"]}
sha2 = "0.10.0"
serde_json = "1.0.140"
colored = "3.0.0"
rayon = "1.10.0"
anyhow = "1.0.98"
globset = "0.4.16"
walkdir = "2.5.0"