[package]
name = "rustyforge"
version = "0.4.0"
authors = ["konni332"]
edition = "2021"
description = "A fast build tool for C, written in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/konni332/rustyforge"
keywords = ["cli", "build", "C", "tool"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
toml = "0.8.23"
clap = { version = "4.5.39", features = ["derive"]}
sha2 = "0.10.0"
serde_json = "1.0.140"
colored = "3.0.0"
rayon = "1.10.0"
anyhow = "1.0.98"
globset = "0.4.16"
walkdir = "2.5.0"
crossterm = "0.29.0"
tempfile = "3.20.0"